--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -4,18 +4,35 @@
 
 $family-sans-serif: "Apercu", "Roboto", sans-serif;
 $nav-button-right-spacing: 0px;
-$rose:#F8F0EC;
-$navbar-background-color: $rose;
+$rose:#F5E5E5;
 $yellow: #EA9A48;
 $purple: #2F1D42;
 $navbar-height: 3rem;
 $column-gap: 2rem;
 $footer-background-color: #0A0909;
 $link: #C86A5B;
+$table-cell-border-width: 0 0 0px;
+$table-cell-border: none;
+$table-background-color: none;
+$table-color: white;
+$table-cell-padding: 0 0em;
+
+* {
+  -webkit-overflow-scrolling: touch;
+}
 
 html,body{
   overflow-x: hidden;
   overflow-y: auto;
+}
+
+.table{
+  width: 100%;
+}
+
+.small-text{
+  font-weight: bold;
+  font-size: 60%;
 }
 
 .box-outer{
@@ -27,6 +44,7 @@ html,body{
 }
 
 #global-nav {
+  background-color: transparent;
   position: fixed;
   top: 0;
   z-index: 9999;
@@ -38,6 +56,7 @@ html,body{
 }
 
 .scrolled-nav {
+  background-color: $rose !important;
   height: 40px !important;
   line-height: 60px !important;
 }
@@ -48,11 +67,11 @@ html,body{
 
 
 .travel-column{
-  padding-right: 4em !important;
+  padding-right: 1.6em !important;
 }
 
 .header{
-  color: $rose !important;
+  color: white !important;
 }
 
 .event-name{
@@ -135,11 +154,6 @@ p{
 
 .main{
   background-color: $rose;
-  border: 10px solid transparent;
-    padding: 15px;
-    -webkit-border-image: url("../images/bottom-border.svg") 50 round; /* Safari 3.1-5 */
-    -o-border-image: url("../images/bottom-border.svg") 50 round; /* Opera 11-12.1 */
-    border-image: url("../images/bottom-border.svg") 50 round;
 }
 
 .main-text{
@@ -163,4 +177,13 @@ p{
   font-size: 0.9em;
   color: $rose !important;
 }
+
+@media only screen and (max-width: 768px) {
+  .column-couple-text{
+    padding-left: 2em !important;
+    padding-top: 2em !important;
+    padding-right: 2em !important;
+  }
+}
+
 @import "../../node_modules/bulma/bulma";
