--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -37,7 +37,7 @@ html,body{
 }
 
 .box-outer{
-  background-color: #FCF7F7 !important;
+  background-color: rgba(240, 226, 223, 0.253) !important;
 }
 
 .navbar-menu{
@@ -179,11 +179,31 @@ p{
   color: $rose !important;
 }
 
+.map-responsive{
+  overflow:hidden;
+  padding-bottom:56.25%;
+  position:relative;
+  height:0;
+}
+.map-responsive iframe{
+  left:0;
+  top:0;
+  height:100%;
+  width:100%;
+  position:absolute;
+}
+
 @media only screen and (max-width: 768px) {
   .column-couple-text{
     padding-left: 2em !important;
     padding-top: 2em !important;
     padding-right: 2em !important;
+  }
+  .the-couple{
+    background-image: none;
+  }
+  .faq{
+    background-image: none;
   }
 }
 
