--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -5,13 +5,13 @@
 $family-sans-serif: "Apercu", "Roboto", sans-serif;
 $nav-button-right-spacing: 0px;
 $rose:#F5E5E5;
-$yellow: #EA9A48;
-$navbar-background-color: $rose;
+$yellow: #FFE87B;
 $purple: #2F1D42;
 $navbar-height: 3rem;
 $column-gap: 2rem;
 $footer-background-color: #0A0909;
-$link: #C86A5B;
+$link: rgb(215,33,133);
+$grey: #F9F9FA;
 $navbar-item-active-color: $link;
 $table-cell-border-width: 0 0 0px;
 $table-cell-border: none;
@@ -27,17 +27,59 @@ html,body{
   overflow-x: hidden;
 }
 
-.table{
+.pace {
+  -webkit-pointer-events: none;
+  pointer-events: none;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
+
+  -webkit-transform: translate3d(0, -50px, 0);
+  -ms-transform: translate3d(0, -50px, 0);
+  transform: translate3d(0, -50px, 0);
+
+  -webkit-transition: -webkit-transform .5s ease-out;
+  -ms-transition: -webkit-transform .5s ease-out;
+  transition: transform .5s ease-out;
 }
 
-.small-text{
-  font-weight: bold;
-  font-size: 60%;
+.pace.pace-active {
+  -webkit-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
 }
 
-.box-outer{
-  background-color: rgba(240, 226, 223, 0.253) !important;
+.pace {
+  -webkit-pointer-events: none;
+  pointer-events: none;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+.pace-inactive {
+  display: none;
+}
+
+.pace .pace-progress {
+  background:$link;
+  position: fixed;
+  z-index: 2000;
+  top: 0;
+  right: 100%;
+  width: 100%;
+  height: 3px;
+}
+
+#real-question{
+  color: $link !important;
 }
 
 .navbar-menu{
@@ -57,15 +99,10 @@ html,body{
 }
 
 .scrolled-nav {
-  background-color: $rose !important;
-  height: 40px !important;
+  background-color: $grey !important;
+  height: 60px !important;
   line-height: 60px !important;
 }
-
-.rsvp{
-  background-color: $rose;
-}
-
 
 .travel-column{
   padding-right: 1.6em !important;
@@ -76,19 +113,15 @@ html,body{
 }
 
 .event-name{
-  color: white !important;
   font-weight: 800;
-  font-size: 1.1em;
+  font-size: 1.3em;
 }
 
-.schedule{
-  background-color: #051631;
-  color:white;
-}
 
 .date{
-  font-weight: 800;
-  font-size: 1.1em;
+  font-weight: 300;
+  font-size: 1.3em;
+  color: grey;
 }
 
 .main-title{
@@ -96,15 +129,16 @@ html,body{
 }
 
 .title{
-  font-size: 4em !important;
+  font-weight: 900;
 }
 
 .logo{
-  color: #D86357;
+  color: $link;
 }
 
-.button{
+tag{
   white-space: normal !important;
+  width: 100px !important;
 }
 
 .column-couple-text{
@@ -113,10 +147,30 @@ html,body{
   padding-right: 2em !important;
 }
 
+.thin{
+  font-weight: 300 !important;
+  font-size: 1.05em;
+}
+
+.thin-grey{
+  font-weight: 300 !important;
+  font-size: 1.05em;
+  color: grey;
+}
+
+.thin-same{
+  font-weight: 300 !important;
+}
+
+.faq-questions{
+  font-size: 1.05em !important;
+}
 
 .faq-text{
   padding-left: 2em !important;
   margin-top: 0.7em !important;
+  font-weight: 300 !important;
+  font-size: 1.05em !important;
 }
 
 .faq{
@@ -153,8 +207,52 @@ p{
   background-attachment: fixed;
 }
 
-.main{
-  background-color: $rose;
+.schedule{
+  background-image: url("../images/c-background.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+}
+
+.quiz{
+  background-image: url("../images/geometry.png");
+}
+
+#main{
+  background-image: url("../images/c-3-color.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+#rsvp{
+  background-image: url("../images/geometry2.png");
+}
+.rsvp-label{
+  position: relative;
+  z-index: 1000;
+}
+
+.rsvp-label:after{
+  background: linear-gradient(to bottom, transparent 0%, transparent 60%, $yellow 60%, $yellow 88%, transparent 88%);
+  content: '';
+  z-index: -1000;
+  position: absolute;
+  height: 1.3em;
+  width: 98%;
+  bottom: 0em;
+  left: 0.3em;
+}
+
+.rsvp-label-2{
+  background: linear-gradient(to bottom, transparent 0%, transparent 55%, $yellow 55%, $yellow 90%, transparent 90%);
+}
+
+
+.subtitle{
+  font-weight: 300 !important;
+  color: grey !important;
 }
 
 .main-text{
@@ -174,9 +272,8 @@ p{
   color: $rose;
 }
 
-.footer-text{
-  font-size: 0.9em;
-  color: $rose !important;
+#footer{
+  font-size: 10px !important;
 }
 
 .map-responsive{
@@ -193,11 +290,22 @@ p{
   position:absolute;
 }
 
+@media (orientation: portrait) {
+  #main{
+    background-image: url("../images/c-3-color-slim.jpg");
+  }
+}
+
 @media only screen and (max-width: 768px) {
   .column-couple-text{
     padding-left: 2em !important;
     padding-top: 2em !important;
     padding-right: 2em !important;
+  }
+  .hero-body{
+    padding-left: 0em !important;
+    padding-top: 0em !important;
+    padding-right: 0em !important;
   }
   .the-couple{
     background-image: none;
@@ -205,6 +313,10 @@ p{
   .faq{
     background-image: none;
   }
+  .schedule{
+    background-image: none;
+  }
+
 }
 
 @import "../../node_modules/bulma/bulma";
