bug fixes, slight modifications

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -94,7 +94,7 @@ html, body {
 
 .date {
   font-weight: 300;
-  font-size: 1.3em;
+  font-size: 1.2em;
   color: grey;
 }
 
@@ -108,11 +108,6 @@ html, body {
 
 .logo {
   color: #d72185;
-}
-
-tag {
-  white-space: normal !important;
-  width: 100px !important;
 }
 
 .column-couple-text {
@@ -190,6 +185,10 @@ p {
 
 .quiz {
   background-image: url("../images/geometry.png");
+}
+
+#proposal {
+  border-radius: 10px;
 }
 
 #main {
@@ -290,6 +289,12 @@ p {
   }
   .schedule {
     background-image: none;
+  }
+}
+
+@media only screen and (max-width: 1023px) {
+  .scrolled-nav {
+    height: 10px !important;
   }
 }
 
