--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -42,6 +42,10 @@ html, body {
   display: none;
 }
 
+.orange {
+  color: orange;
+}
+
 .pace .pace-progress {
   background: #d72185;
   position: fixed;
@@ -264,7 +268,13 @@ p {
   position: absolute;
 }
 
-@media (orientation: portrait) {
+@media (orientation: portrait) and (min-width: 600px) {
+  #main {
+    background-image: url("../images/c-3-color-slim-ipad.jpg");
+  }
+}
+
+@media (orientation: portrait) and (max-width: 600px) {
   #main {
     background-image: url("../images/c-3-color-slim.jpg");
   }
