--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -223,7 +223,7 @@ p{
 }
 
 #main{
-  background-image: url("../images/c-3-color.jpg");
+  background-image: url("../images/background_take1.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
